# stock-analysis-ai-agent

./: README.md  pyproject.toml
src/: config.py  crew.yaml  main.py  pyproject.toml  requirements.txt
src/agents/: analyst.py  investment_advisor.py  researcher.py
src/crewai_example/: main.py  stock_analysis_agents.py
src/crewai_example/tools/: browser_tools.py  search_tools.py  sec_tools.py
src/stock_analysis/: main.py  requirements.txt  stock_analysis_agents.py  stock_analysis_tasks.py  utils.py
src/stock_analysis/tools/: browser_tools.py  calculator_tools.py  finance_tools.py  search_tools.py
stock_analysis/: MistralModelFile  README.md  create-mistral-model-file.sh  create-mixtral-model-file.sh  pyproject.toml  requirements.txt
stock_analysis/src/stock_analysis/: crew.py  main.py
stock_analysis/src/stock_analysis/config/: agents.yaml  tasks.yaml
stock_analysis/src/stock_analysis/tools/: custom_tool.py  google_serper.py  sec_tool.py  serper_tool.py  stock_visualization.py  yahoo_finance.py
stockanalysis/src/: config.py  main.py  requirements.txt
stockanalysis/src/agents/: stock_agent.py
stockanalysis/src/tools/: llm_tools.py  scrape_tools.py  sec_tools.py
