[project]
name = "stock-analysis-ai-agent"
version = "0.1.0"
description = "AI agent crew for stock analysis using CrewAI, LangChainAI, and LangSmith."
authors = [{ name = "Andrei Vivar", email = "your-email@example.com" }]
dependencies = [
    "langchain",
    "requests",
    # Add other dependencies as needed
]

[tool.crewai]
name = "stock-analysis"
description = "Stock analysis AI agent crew using CrewAI."